@@ -1,3 +1,8 @@
+SimpleComplex/Validate 2.x, 2018-03-26
+--------------------------------------
+- empty() shan't check for ArrayObject|ArrayIterator upon checkíng for Countable
+  because they are both Countable.
+
 SimpleComplex/Validate 2.x, 2017-09-24
 --------------------------------------
 - Release 1.0.
